// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux/reducers/serviceApi/passwordReset error 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": Object {
      "message": "serviceApi/RESET_PASSWORD request failed",
      "response": undefined,
    },
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordReset refresh 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": Object {},
    "error": undefined,
    "loading": true,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordReset start 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": true,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordReset success 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": Object {},
    "error": undefined,
    "loading": false,
  },
}
`;
